# forge-keeper

./: .env  .gitignore  .project  Makefile  Pipfile  README.md  conductor-api.yaml  index.md  spec.json  store.sql
digital.forge.data.server/: .project  Makefile  README.md  make.ps1  setup.json  setup.py
digital.forge.data.server.core/: .project  Makefile  README.md  setup.json  setup.py
digital.forge.data.server.core/src/digital/forge/data/server/: tools.py
digital.forge.data.server.core/src/digital/forge/data/server/impl/: conductor_controller.py  drone_controller.py
digital.forge.data.server/config/: codegen-config.json
digital.forge.data.server/config/templates/: __main__.mustache  controller.mustache
digital.forge.data.sql/: .gitignore  .project  Makefile  README.md  setup.json  setup.py
digital.forge.data.sql/src/digital/forge/data/sql/: tools.py
digital.forge.data.sql/src/digital/forge/data/sql/model/: __init__.py  archive.py  drone.py
digital.forge.http.server/: .project  Makefile  README.md  setup.json  setup.py  setup_test.py
digital.forge.http.server.decorator.cors/: .project  Makefile  README.md  requirements.txt  setup.json  setup.py
digital.forge.http.server.decorator.cors/src/digital/forge/http/server/decorator/: cors.py
digital.forge.http.server.decorator.sqlalchemy/: .project  Makefile  README.md  requirements.txt  setup.json  setup.py
digital.forge.http.server.decorator.sqlalchemy/src/digital/forge/http/server/decorator/: sqlalchemy.py
digital.forge.http.server/src/: .gitignore
digital.forge.http.server/src/digital/forge/http/server/: app_decorator.py  app_factory.py
digital.forge.http.server/src/test/: test_app_factory.py
digital.forge.keeper.data/: .project
digital.forge.keeper.data/src/digital/forge/keeper/data/: tools.py
digital.forge.keeper.http.server/: .project  .pydevproject  README.md
digital.forge.keeper.http.server.core/: .project
digital.forge.keeper.http.server/config/: cfg.json  store.sql  tables.sql
digital.forge.keeper.http.server/config/templates/: __main__.mustache  requirements.mustache  setup.mustache
src/: Makefile  data.json
src/app-decorator-cors/: .project  .pydevproject  README.md  pyproject.toml
src/app-decorator-cors/src/digital/forge/app/decorator/: cors.py
src/app-decorator-sqlalchemy/: .project  .pydevproject  Makefile  README.md  pyproject.toml
src/app-decorator-sqlalchemy/src/digital/forge/app/decorator/: sqlalchemy.py
src/app-utils/: .gitignore  .project  .pydevproject  README.md  pyproject.toml  setup.py
src/app-utils/src/digital/forge/app/: decorator.py  factory.py
src/app-utils/src/digital/forge/http/server/: app_decorator.py  app_factory.py
src/app-utils/src/test/: test_app_factory.py
src/data-client/: .gitignore  .project  .pydevproject  Makefile  pyproject.toml
src/data-client/cfg/: codegen.json
src/data-client/cfg/src/: .openapi-generator-ignore
src/data-client/cfg/tests/: .openapi-generator-ignore
src/data-client/src/digital/forge/data/: api_client.py  configuration.py  exceptions.py  rest.py
src/data-client/src/digital/forge/data/api/: __init__.py  conductor_api.py  drone_api.py
src/data-client/src/test/: test_conductor_api.py  test_drone_api.py
src/data-model/: .gitignore  .project  .pydevproject  Makefile  pyproject.toml
src/data-model/cfg/: codegen.json
src/data-model/cfg/src/: .openapi-generator-ignore
src/data-model/cfg/src/templates/: __init__model.mustache  base_model_.mustache  encoder.mustache  model.mustache  typing_utils.mustache  util.mustache
src/data-model/cfg/tests/: .openapi-generator-ignore
src/data-model/cfg/tests/templates/: model_test.mustache
src/data-model/src/digital/forge/data/: encoder.py  typing_utils.py  util.py
src/data-model/src/digital/forge/data/models/: __init__.py  archive.py  archive_inputs.py  base_model_.py  drone.py  drone_inputs.py  error_response.py  event.py
src/data-model/src/test/: test_archive.py  test_archive_inputs.py  test_drone.py  test_drone_inputs.py  test_error_response.py  test_event.py
src/data-server/: .gitignore  .project  .pydevproject  Makefile  README.md  pyproject.toml  stack.yml
src/data-server/cfg/: .openapi-generator-ignore  codegen.json
src/data-server/cfg/src/: .openapi-generator-ignore
src/data-server/cfg/src/templates/: Dockerfile.mustache  __main__.mustache  controller.mustache  encoder.mustache
src/data-server/cfg/tests/: .openapi-generator-ignore
src/data-server/cfg/tests/templates/: __init__test.mustache  controller_test.mustache
src/data-server/src/: Dockerfile
src/data-server/src/digital/forge/data/openapi/: openapi.yaml
src/data-server/src/digital/forge/data/server/: __main__.py  conductor_controller.py  drone_controller.py  encoder.py  tools.py
src/data-server/src/test/: __init__.py  test_conductor_controller.py  test_drone_controller.py  test_encoder.py
src/data-sql/: .project  .pydevproject  README.md  pyproject.toml
src/data-sql/src/digital/forge/data/sql/: tools.py
src/data-sql/src/digital/forge/data/sql/model/: __init__.py  archive.py  base.py  drone.py  event.py
src/iot-drone/: README.md
src/monitor/: .pydevproject  pyproject.toml
src/monitor/src/monitor/: __init__.py  __main__.py
src/py-drone/: .project  .pydevproject  Makefile  README.md  pyproject.toml
src/py-drone/docker/: Dockerfile  drone.yml
src/py-drone/src/digital/forge/drone/: __init__.py  __main__.py  reader.py  sender.py
src/py-drone/src/test/: py-drone-bad.json  py-drone-url.json  py-drone.json  test_main.py  test_reader.py  test_sender.py
src/sensors/dht22-wifi/: dht22-wifi.cpp
src/sensors/dht22-wifi/dht22-wifi/: platformio.ini
src/sensors/dht22-wifi/dht22-wifi/include/: Monitor.h  Network.h  Reporter.h  SerialReporter.h
src/sensors/dht22-wifi/dht22-wifi/src/: Monitor.cpp  Network.cpp  SerialReporter.cpp  main.cpp
src/sensors/dht22/nano-iot-33/: nano-iot-33.ino
src/sensors/dht22/nano.cpp/: nano.cpp.ino
stacks/: README.md  backend.yml
tools/make/: common.mk  openapi.mk  python.mk
(+7 files in other folders)
