[tool.poetry]
name = "digital-forge-app-utils"
version = "0.0.0"
description = "This project provides web app utility classes to give better control over Flask apps."
authors = ["Jordan Deyton <jordan.deyton@gmail.com>"]
license = "MIT"
packages = [ { from = "src", include = "digital" } ]

[tool.poetry.dependencies]
python = "^3.8"
flask_cors = "^3.0.8"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
