[tool.poetry]
name = "digital-forge-app-decorator-cors"
version = "0.1.0"
description = "This project provides web app utility classes to give better control over Flask apps."
authors = ["Jordan Deyton <jordan.deyton@gmail.com>"]
license = "MIT"
packages = [ { from = "src", include = "digital" } ]

[tool.poetry.dependencies]
python = "^3.8"
flask_cors = "^3.0.8"
digital-forge-app-utils = "^0.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[[tool.poetry.source]]
name = "forge-pypi"
url = "http://localhost:60001/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
