[tool.poetry]
name = "digital-forge-app-utils"
version = "0.1.2"
description = "This project provides web app utility classes to give better control over Flask apps."
authors = ["Jordan Deyton <jordan.deyton@gmail.com>"]
license = "MIT"
packages = [ { from = "src", include = "digital" } ]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
validators = "^0.16.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
