[tool.poetry]
name = "digital-forge-data-client"
version = "0.1.0"
description = "Python client for the forge.digital Keeper project."
authors = ["Jordan Deyton <jordan.deyton@gmail.com>"]
license = "MIT"
packages = [ { from = "src", include = "digital" } ]

[tool.poetry.dependencies]
python = "^3.8"
python_dateutil = "^2.8.1"
urllib3 = "^1.25.10"
certifi = "^2020.6.20"
digital-forge-data-model = "^0.2.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
pylint = "^2.5.3"

[[tool.poetry.source]]
name = "forge-pypi"
url = "http://localhost:60001/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
