[tool.poetry]
name = "digital-forge-data-model"
version = "0.2.2"
description = "Object model for the forge.digital Keeper project."
authors = ["Jordan Deyton <jordan.deyton@gmail.com>"]
license = "MIT"
packages = [ { from = "src", include = "digital" } ]

[tool.poetry.dependencies]
python = "^3.8"
six = "^1.15.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
