[tool.poetry]
name = "digital-forge-data-server"
version = "0.0.0"
description = "Flask-based backend for the forge.digital Keeper project."
authors = ["Jordan Deyton <jordan.deyton@gmail.com>"]
license = "MIT"
packages = [ { from = "src", include = "digital" } ]

[tool.poetry.dependencies]
python = "^3.8"
connexion = "^2.7.0"
digital-forge-data-model = "^0.0.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
pylint = "^2.5.3"
flask_testing = "^0.8.0"

[[tool.poetry.source]]
name = "forge-pypi"
url = "http://localhost:60001/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
