[tool.poetry]
name = "digital-forge-data-server"
version = "0.1.8"
description = "Flask-based backend for the forge.digital Keeper project."
authors = ["Jordan Deyton <jordan.deyton@gmail.com>"]
license = "MIT"
packages = [ { from = "src", include = "digital" } ]

[tool.poetry.dependencies]
python = "^3.8"
connexion = "^2.7.0"
python_dateutil = "^2.8.1"
swagger-ui-bundle = "^0.0.8"
Flask = "^1.1.2"
validators = "^0.16.0"
digital-forge-app-utils = "^0.1.3"
digital-forge-app-decorator-cors = "^0.1.2"
digital-forge-app-decorator-sqlalchemy = "^0.1.2"
digital-forge-data-model = "^0.2.1"
digital-forge-data-sql = "^0.1.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
pylint = "^2.5.3"
flask_testing = "^0.8.0"

[[tool.poetry.source]]
name = "forge-pypi"
url = "http://localhost:60001/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
