[tool.poetry]
name = "digital-forge-data-sql"
version = "0.1.0"
description = "This project provides a database ORM for storing sensor data."
authors = ["Jordan Deyton <jordan.deyton@gmail.com>"]
license = "MIT"
packages = [ { from = "src", include = "digital" } ]

[tool.poetry.dependencies]
python = "^3.8"
SqlAlchemy = "^1.3.18"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
