[tool.poetry]
name = "digital-forge-drone"
version = "0.1.0"
description = "A drone implementation that sends sensor data to the forge.digital Keeper API."
authors = ["Jordan Deyton <jordan.deyton@gmail.com>"]
license = "MIT"
packages = [ { from = "src", include = "digital" } ]

[tool.poetry.dependencies]
python = "^3.8"
digital-forge-data-model = "^0.2.2"
digital-forge-data-client = "^0.1.0"
PySerial = "^3.4"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[tool.poetry.scripts]
py-drone = "digital.forge.drone.__main__:main"

[[tool.poetry.source]]
name = "forge-pypi"
url = "http://localhost:60001/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
